--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ background-color: #404BBF ;
      padding-left: 15px;
      padding-right: 15px; 
 
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 
 .second-container {
